Moved the testing stuff out to testsuite/slurm_unit/api/api-test.c

--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -30,7 +30,8 @@ libslurm_la_SOURCES =    \
 	partition_info.c \
 	submit.c         \
 	reconfigure.c    \
-	update_config.c  
+	update_config.c  \
+	cancel.c
 
 common_dir = $(top_srcdir)/src/common
 
