--- a/trunk/testsuite/slurm_unit/Makefile.am
+++ b/trunk/testsuite/slurm_unit/Makefile.am
@@ -2,5 +2,5 @@ AUTOMAKE_OPTIONS = foreign
 
 #noinst_PROGRAMS = $(elan_testprogs) pack-test log-test
 
-SUBDIRS = common
+SUBDIRS = common slurmctld api
 
