--- a/trunk/testsuite/slurm_unit/common/Makefile.am
+++ b/trunk/testsuite/slurm_unit/common/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
 
-noinst_PROGRAMS = pack-test log-test stream_server stream_client
+noinst_PROGRAMS = pack-test log-test stream_server stream_client bitstring-test
 
 LDADD   = $(top_srcdir)/src/common/libcommon.la
