--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -138,6 +138,9 @@ AC_CONFIG_FILES([Makefile
 		 testsuite/Makefile
 		 testsuite/slurm_unit/Makefile
 		 testsuite/slurm_unit/common/Makefile
+		 testsuite/slurm_unit/slurmctld/Makefile
+		 testsuite/slurm_unit/api/Makefile
+		 testsuite/slurm_unit/api/manual/Makefile
 		]
 )
 
