changed build_info.c to config_info.c

--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -12,7 +12,7 @@ INCLUDES = -I$(top_srcdir)/src/common
 # (--enable-debug)
 #
 if DEBUG_MODULES
-test_modules = allocate build_info cancel job_info node_info partition_info reconfigure submit update_config
+test_modules = allocate config_info cancel job_info node_info partition_info reconfigure submit update_config
 else
 test_modules = 
 endif
@@ -24,7 +24,7 @@ lib_LTLIBRARIES = libslurm.la
 
 libslurm_la_SOURCES =    \
 	allocate.c       \
-	build_info.c     \
+	config_info.c     \
 	job_info.c       \
 	node_info.c      \
 	partition_info.c \
@@ -62,7 +62,7 @@ libslurm_la_DEPENDENCIES  = libslurm.sym $(libslurm_la_LIBADD)
 # place of the rules that follow.
 
 #allocate_CFLAGS        = -DDEBUG_MODULE $(AM_CFLAGS)
-#build_info_CFLAGS      = -DDEBUG_MODULE $(AM_CFLAGS)
+#config_info_CFLAGS      = -DDEBUG_MODULE $(AM_CFLAGS)
 #cancel_CFLAGS          = -DDEBUG_MODULE $(AM_CFLAGS)
 #job_info_CFLAGS        = -DDEBUG_MODULE $(AM_CFLAGS)
 #node_info_CFLAGS       = -DDEBUG_MODULE $(AM_CFLAGS)
@@ -82,7 +82,7 @@ libslurm_la_DEPENDENCIES  = libslurm.sym $(libslurm_la_LIBADD)
 maintests      : allocate cancel job_info node_info partition_info  reconfigure submit update_config
 
 allocate       : allocate_d.o
-build_info     : build_info_d.o
+config_info     : config_info_d.o
 cancel         : cancel_d.o
 job_info       : job_info_d.o
 node_info      : node_info_d.o
