Getting slurmd functional with the new comm layer

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -7,9 +7,8 @@ sbin_PROGRAMS = slurmd
 
 LDADD = $(top_srcdir)/src/common/libcommon.la
 
-#slurmd_SOURCES = get_mach_stat.c \
-#                 read_proc.c \
-#		 slurmd.c
 
-slurmd_SOURCES = slurmd.c
+slurmd_SOURCES = slurmd.c \
+		get_mach_stat.c \
+		read_proc.c
 
