--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -139,6 +139,7 @@ AC_CONFIG_FILES([Makefile
 		 testsuite/slurm_unit/Makefile
 		 testsuite/slurm_unit/common/Makefile
 		 testsuite/slurm_unit/slurmctld/Makefile
+		 testsuite/slurm_unit/slurmd/Makefile
 		 testsuite/slurm_unit/api/Makefile
 		 testsuite/slurm_unit/api/manual/Makefile
 		]
