o updates to some option names and other various cleanup items.

--- a/trunk/src/srun/Makefile.am
+++ b/trunk/src/srun/Makefile.am
@@ -5,5 +5,5 @@ INCLUDES = $(POPT_INCLUDES)
 bin_PROGRAMS = srun
 
 srun_SOURCES = srun.c opt.c env.c opt.h env.h
-srun_LDFLAGS = 
+srun_LDFLAGS = $(top_srcdir)/src/common/libcommon.la
 srun_LDADD = $(POPT_LIBS) 
