Shared memory code to allow for IPC across forks

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -11,5 +11,6 @@ LDADD = $(top_srcdir)/src/common/libcommon.la
 slurmd_SOURCES = slurmd.c \
 		get_mach_stat.c \
 		read_proc.c \
-		task_mgr.c
+		task_mgr.c \
+		shmem_struct.c
 
