Added link module to rule

--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -4,4 +4,5 @@ noinst_PROGRAMS = task_mgr-test
 
 INCLUDES = -I$(top_srcdir)/src/common
 LDADD   = $(top_srcdir)/src/common/libcommon.la \
-		$(top_srcdir)/src/slurmd/task_mgr.o
+	$(top_srcdir)/src/slurmd/task_mgr.o \
+	$(top_srcdir)/src/slurmd/shmem_struct.o
