Added scancel command

--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -1,9 +1,9 @@
 # make sure popt gets distributed:
 EXTRA_DIST = popt
 
-# add subdirs "scancel" and "squeue" as soon as something is there:
+# add subdir "squeue" as soon as something is there:
 if USE_INCLUDED_POPT
-SUBDIRS = popt common api slurmctld slurmd srun scontrol test
+SUBDIRS = popt common api slurmctld slurmd srun scontrol scancel test
 else
-SUBDIRS = common api slurmctld slurmd srun scontrol test
+SUBDIRS = common api slurmctld slurmd srun scontrol scancel test
 endif
