Added initial circular_buffer code

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -12,5 +12,6 @@ slurmd_SOURCES = slurmd.c \
 		get_mach_stat.c \
 		read_proc.c \
 		task_mgr.c \
-		shmem_struct.c
+		shmem_struct.c \
+		circular_buffer.c
 
