Added util-signal target added EINTR handling to send and recv protocol routines improved signal management during sends

--- a/trunk/src/common/Makefile.am
+++ b/trunk/src/common/Makefile.am
@@ -34,6 +34,7 @@ libcommon_la_SOURCES = 	xmalloc.c 	\
 			slurm_protocol_socket_implementation.c	\
 			slurm_protocol_defs.c	\
 			slurm_protocol_errno.c		\
+			util_signals.c
 			$(elan_sources)
 
 noinst_HEADERS = 	xmalloc.h 	\
@@ -59,7 +60,8 @@ noinst_HEADERS = 	xmalloc.h 	\
 			slurm_protocol_errno.h		\
 			slurm_errno.h		\
 			slurm_return_codes.h		\
-			qsw.h	
+			qsw.h			\
+			util_signals.h
 
 EXTRA_libcommon_la_SOURCES =		\
 			qsw.c
