--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -1,8 +1,9 @@
 AUTOMAKE_OPTIONS = foreign
 
-noinst_PROGRAMS = task_mgr-test
+noinst_PROGRAMS = task_mgr-test circular_buffer-test
 
 INCLUDES = -I$(top_srcdir)/src/common
 LDADD   = $(top_srcdir)/src/common/libcommon.la \
 	$(top_srcdir)/src/slurmd/task_mgr.o \
-	$(top_srcdir)/src/slurmd/shmem_struct.o
+	$(top_srcdir)/src/slurmd/shmem_struct.o \
+	$(top_srcdir)/src/slurmd/circular_buffer.o
