Initial draft of squeue command.

--- a/trunk/src/squeue/Makefile.am
+++ b/trunk/src/squeue/Makefile.am
@@ -1,1 +1,12 @@
 # Makefile for squeue
+
+AUTOMAKE_OPTIONS = foreign
+
+INCLUDES = -I$(top_srcdir)/src/common -I$(top_srcdir)/src/api
+
+bin_PROGRAMS = squeue
+
+LDADD = $(top_srcdir)/src/common/libcommon.la $(top_srcdir)/src/api/libslurm.la
+
+scontrol_SOURCES = squeue.c
+
