Add support for squeue

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -135,6 +135,7 @@ AC_CONFIG_FILES([Makefile
 		 src/slurmctld/Makefile 
 		 src/scontrol/Makefile
 		 src/scancel/Makefile
+		 src/squeue/Makefile
 		 src/test/Makefile
 		 testsuite/Makefile
 		 testsuite/slurm_unit/Makefile
