--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -3,7 +3,7 @@ EXTRA_DIST = popt
 
 # add subdir "squeue" as soon as something is there:
 if USE_INCLUDED_POPT
-SUBDIRS = popt common api slurmctld slurmd srun scontrol scancel test
+SUBDIRS = popt common api slurmctld slurmd srun scontrol scancel squeue test
 else
-SUBDIRS = common api slurmctld slurmd srun scontrol scancel test
+SUBDIRS = common api slurmctld slurmd srun scontrol scancel squeue test
 endif
