Added additional config parameters. use slurm.conf only.

--- a/trunk/etc/slurm.conf
+++ b/trunk/etc/slurm.conf
@@ -1,10 +1,20 @@
 # 
-# Sample /etc/slurm.conf2
+# Sample /etc/slurm.conf
 # Author: John Doe
 # Date: 11/06/2001
 #
-ControlMachine=linux
-BackupController=lx01
+ControlMachine=localhost BackupController=localhost
+Epilog="" Prolog=""
+FastSchedule=1
+FirstJobId=65536
+HashBase=10
+HeartbeatInterval=60
+KillWait=30
+Prioritize=/usr/local/maui/priority
+SlurmctldPort=7002 SlurmdPort=7003
+SlurmctldTimeout=300 SlurmdTimeout=300
+StateSaveLocation=/tmp/slurm.state
+TmpFS=/tmp
 #
 # Node Configurations
 #
