Added additional config parameters. use slurm.conf only. Changed (removed, added, renamed) configuration parameters.

--- a/trunk/src/common/Makefile.am
+++ b/trunk/src/common/Makefile.am
@@ -28,6 +28,7 @@ libcommon_la_SOURCES = 	xmalloc.c 	\
 			pack.c		\
 			xerrno.c	\
 			hostlist.c	\
+			parse_spec.c	\
 			slurm_protocol_api.c	\
 			slurm_protocol_pack.c	\
 			slurm_protocol_util.c	\
@@ -49,6 +50,7 @@ noinst_HEADERS = 	xmalloc.h 	\
 			pack.h		\
 			xerrno.h	\
 			hostlist.h	\
+			parse_spec.h	\
 			slurm_protocol_api.h	\
 			slurm_protocol_pack.h	\
 			slurm_protocol_util.h	\
