--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -1,5 +1,7 @@
 # This file is to be processed with autoconf to generate a configure script
 
+dnl Prologue
+dnl
 AC_INIT
 AC_PREREQ(2.52)
 AC_CONFIG_SRCDIR([configure.ac])
@@ -16,10 +18,6 @@ VERSION=$SLURM_VERSION
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION", [Define the project's version.])
 AC_SUBST(VERSION)
 
-dnl Automake stuff.
-AM_INIT_AUTOMAKE(slurm, $VERSION)
-AM_CONFIG_HEADER(config.h)
-
 AC_DEFINE_UNQUOTED(SLURM_VERSION, "$SLURM_VERSION", [slurm version number])
 AC_SUBST(SLURM_VERSION)
 AC_DEFINE_UNQUOTED(SLURM_MAJOR, "$SLURM_MAJOR", [slurm major version number])
@@ -27,77 +25,37 @@ AC_SUBST(SLURM_MAJOR)
 AC_DEFINE_UNQUOTED(SLURM_MINOR, "$SLURM_MINOR", [slurm minor version number])
 AC_SUBST(SLURM_MINOR)
 
-dnl Set SLURM_CONFIG_FILE in config.h
-topsrcdir=`cd $srcdir && pwd`
-AH_TEMPLATE(SLURM_CONFIG_FILE, [slurm config file location])
-if test "x${sysconfdir}" = 'x${prefix}/etc'; then
-  dnl XXX for testing phase only, use /etc in srcdir: 
-  AC_DEFINE_UNQUOTED(SLURM_CONFIG_FILE, "${topsrcdir}/etc/slurm.conf", []) 
-else
-  AC_DEFINE_UNQUOTED(SLURM_CONFIG_FILE, "${sysconfdir}/slurm.conf", [])
-fi
 
-# check for debug compilation of slurm modules:
-AC_MSG_CHECKING(whether debug compilation of modules is enabled)
-AC_ARG_ENABLE(debug, 
-  AC_HELP_STRING([--enable-debug],[Enable debugging of individual modules]),
-  [ case "${enableval}" in
-     yes) with_slurm_debug=true ;;
-     no)  with_slurm_debug=false ;;
-     *) AC_MSG_ERROR([bad value ${enableval} for --enable-debug]) ;;
-    esac
-  ]
-)
-AC_MSG_RESULT(${with_slurm_debug=no})
-if test "x$with_slurm_debug" = "xtrue"; then 
-  CFLAGS="${CFLAGS--g -Wall -Wpointer-arith}"
-  AC_DEFINE(DEBUG_SYSTEM, 1, [Define for extra debug messages.])
-else
-  CFLAGS="${CFLAGS--g -Wall -Wpointer-arith}"
-fi
-AM_CONDITIONAL(DEBUG_MODULES, test "x$with_slurm_debug" = "xtrue")
-#
+dnl Initialize Automake
+dnl
+AM_INIT_AUTOMAKE(slurm, $VERSION)
+AM_CONFIG_HEADER(config.h)
 
-# check for whether to include Elan support:
-AC_MSG_CHECKING(whether to include Elan support)
-AC_ARG_WITH(elan,
-  AC_HELP_STRING([--with-elan],[compile with Elan support]),
-  [ case "${withval}" in
-      yes) elan=yes ;;
-      no)  elan=no ;;
-      *) AC_MSG_ERROR([bad value ${enableval} for --with-elan]) ;;
-    esac
-  ]
-)
-AC_MSG_RESULT(${elan=no})
-AM_CONDITIONAL(WITH_ELAN, test "x$with_elan" = "xyes")
 
 dnl Checks for programs.
+dnl
 AC_PROG_CC
 AC_PROG_MAKE_SET
 AC_PROG_LIBTOOL
 
+
 dnl Checks for libraries
-if test $with_elan; then
-  AC_CHECK_LIB(elan3, elan3_create,
-    [], 
-    [AC_MSG_ERROR([unable to find the Elan3 library needed for Elan support.])], 
-  )
-  AC_CHECK_LIB(rmscall, rms_prgcreate, 
-    [],
-    [AC_MSG_ERROR([unable to find the RMS library needed for Elan support])],
-  )
-fi
+dnl
+
 
 dnl Checks for header files.
+dnl
 AC_CHECK_HEADERS(popt.h mcheck.h values.h socket.h sys/socket.h stdbool.h)
 AC_HEADER_SYS_WAIT
 AC_HEADER_TIME
 AC_HEADER_STDC
 
-dnl Checks for structures.
 
-# check to see if glibc's program_invocation_short_name is available:
+dnl Checks for structures.
+dnl
+
+dnl check to see if glibc's program_invocation_short_name is available:
+dnl
 AC_MSG_CHECKING([for program_invocation_short_name])
 AC_TRY_LINK([extern char *program_invocation_short_name;], 
   [char *p; p = program_invocation_short_name; printf("%s\n", p);],
@@ -113,11 +71,16 @@ fi
 
 
 dnl Checks for types.
+dnl
+
 
 dnl Checks for compiler characteristics.
+dnl
 AC_PROG_GCC_TRADITIONAL([])
 
+
 dnl checks for library functions.
+dnl
 AC_FUNC_MALLOC
 AC_FUNC_STRERROR_R
 AC_CHECK_FUNCS(strerror mtrace)
@@ -136,7 +99,110 @@ fi
 AC_SUBST(POPT_LIBS)
 AC_SUBST(POPT_INCLUDES)
 
+
 dnl checks for system services.
+dnl
+
+
+dnl checks for system-specific stuff.
+dnl
+
+dnl check for debug compilation
+dnl
+AC_MSG_CHECKING(whether debug compilation of modules is enabled)
+AC_ARG_ENABLE(debug, 
+  AC_HELP_STRING([--enable-debug],[Enable debugging of individual modules]),
+  [ case "${enableval}" in
+     yes) with_slurm_debug=true ;;
+     no)  with_slurm_debug=false ;;
+     *) AC_MSG_ERROR([bad value ${enableval} for --enable-debug]) ;;
+    esac
+  ]
+)
+AC_MSG_RESULT(${with_slurm_debug=no})
+if test "x$with_slurm_debug" = "xtrue"; then 
+  CFLAGS="${CFLAGS--g -Wall -Wpointer-arith}"
+  AC_DEFINE(DEBUG_SYSTEM, 1, [Define for extra debug messages.])
+else
+  CFLAGS="${CFLAGS--g -Wall -Wpointer-arith}"
+fi
+AM_CONDITIONAL(DEBUG_MODULES, test "x$with_slurm_debug" = "xtrue")
+
+
+dnl check for slurmd and slurmctld default ports
+dnl
+AC_MSG_CHECKING(for slurmctld default port)
+AC_ARG_WITH(slurmctld-port,
+  AC_HELP_STRING([--with-slurmctld-port=PORT],
+      [set slurmctld default port [[6817]]]),
+    [ if test `expr match "$withval" '[[0-9]]*$'` -gt 0; then
+        slurmctldport="$withval"
+      fi
+    ]
+)
+AC_MSG_RESULT(${slurmctldport=6817})
+AC_DEFINE_UNQUOTED(SLURMCTLD_PORT, "$slurmctldport",
+                   [Define the default port number for slurmctld])
+AC_SUBST(SLURMCTLD_PORT)
+
+AC_MSG_CHECKING(for slurmd default port)
+AC_ARG_WITH(slurmd-port,
+  AC_HELP_STRING([--with-slurmd-port=PORT],
+      [set slurmd default port [[6818]]]),
+    [ if test `expr match "$withval" '[[0-9]]*$'` -gt 0; then
+        slurmdport="$withval"
+      fi
+    ]
+)
+AC_MSG_RESULT(${slurmdport=6818})
+AC_DEFINE_UNQUOTED(SLURMD_PORT, "$slurmdport",
+                   [Define the default port number for slurmd])
+AC_SUBST(SLURMD_PORT)
+
+
+dnl Set SLURM_CONFIG_FILE in config.h
+dnl
+AC_MSG_CHECKING(for slurm config file location)
+AC_ARG_WITH(slurm-conf,
+  AC_HELP_STRING([--with-slurm-conf=FILE],
+      [set slurm config file location]),
+    [ if test -n "$withval" -a "$withval" != yes -a "$withval" != no; then
+        slurmconf="$withval"
+      fi
+    ]
+)
+topsrcdir=`cd $srcdir && pwd`
+AC_MSG_RESULT(${slurmconf=${topsrcdir}/etc/slurm.conf})
+AC_DEFINE_UNQUOTED(SLURM_CONFIG_FILE, "$slurmconf", 
+                   [Define Default slurm config file location])
+
+
+
+dnl check for whether to include Elan support
+dnl
+AC_MSG_CHECKING(whether to include Elan support)
+AC_ARG_WITH(elan,
+  AC_HELP_STRING([--with-elan],[compile with Elan support]),
+  [ case "${withval}" in
+      yes) elan=yes ;;
+      no)  elan=no ;;
+      *) AC_MSG_ERROR([bad value ${enableval} for --with-elan]) ;;
+    esac
+  ]
+)
+AC_MSG_RESULT(${elan=no})
+AM_CONDITIONAL(WITH_ELAN, test "x$with_elan" = "xyes")
+if test $with_elan; then
+  AC_CHECK_LIB(elan3, elan3_create,
+    [], 
+    [AC_MSG_ERROR([unable to find the Elan3 library needed for Elan support.])], 
+  )
+  AC_CHECK_LIB(rmscall, rms_prgcreate, 
+    [],
+    [AC_MSG_ERROR([unable to find the RMS library needed for Elan support])],
+  )
+fi
+
 
 
 dnl All slurm Makefiles:
