This going to break the build ssl needs to be linked in added slurmd_addr to test

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -5,7 +5,7 @@ AUTOMAKE_OPTIONS = foreign
 
 sbin_PROGRAMS = slurmd
 
-LDADD = $(top_srcdir)/src/common/libcommon.la
+LDADD = $(top_srcdir)/src/common/libcommon.la 
 
 
 slurmd_SOURCES = slurmd.c \
@@ -13,5 +13,6 @@ slurmd_SOURCES = slurmd.c \
 		read_proc.c \
 		task_mgr.c \
 		shmem_struct.c \
-		circular_buffer.c
+		circular_buffer.c \
+		credential_utils.c
 
