Enable threading of slurmctld. "make clean" now deletes thread core files at "core.*"

--- a/trunk/src/slurmctld/Makefile.am
+++ b/trunk/src/slurmctld/Makefile.am
@@ -3,6 +3,7 @@
 # Makefile for slurmctld
 
 AUTOMAKE_OPTIONS = foreign
+CLEANFILES = core.*
 
 INCLUDES = -I$(top_srcdir)/src/common
 CFLAGS = -g -Wall 
