--- a/trunk/testsuite/slurm_unit/api/manual/Makefile.am
+++ b/trunk/testsuite/slurm_unit/api/manual/Makefile.am
@@ -1,6 +1,7 @@
 AUTOMAKE_OPTIONS = foreign
 
 noinst_PROGRAMS = cancel-tst \
+		complete-tst \
 		allocate-tst \
 		job_info-tst \
 		node_info-tst \
