o use MAINTAINERCLEANFILES instead of separate target

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -1,13 +1,10 @@
 AUTOMAKE_OPTIONS = foreign
 
-EXTRA_DIST = auxdir etc doc
-
-# don't include lib and doc 'til we have something there
-#SUBDIRS = lib src doc  
-
 SUBDIRS = src testsuite
 
-# remove *all* files that can be regenerated from automated tools
-squeaky-clean: maintainer-clean
-	@find . -name Makefile.in | xargs -t rm 
-	rm -f config.h.in stamp-h.in configure aclocal.m4
+EXTRA_DIST = auxdir etc doc
+
+MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
+	               config.h.in config.sub configure install-sh \
+	               ltconfig ltmain.sh missing mkinstalldirs \
+		       stamp-h.in
