--- a/trunk/src/squeue/Makefile.am
+++ b/trunk/src/squeue/Makefile.am
@@ -6,7 +6,9 @@ INCLUDES = -I$(top_srcdir)/src/common -I$(top_srcdir)/src/api
 
 bin_PROGRAMS = squeue
 
-LDADD = $(top_srcdir)/src/common/libcommon.la $(top_srcdir)/src/api/libslurm.la
+LDADD = $(top_srcdir)/src/common/libcommon.la \
+		$(top_srcdir)/src/api/libslurm.la \
+		$(top_srcdir)/src/popt/libpopt.a
 
-squeue_SOURCES = squeue.c
+squeue_SOURCES = squeue.c print.c
 
