Added more object files to target

--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -9,5 +9,7 @@ LDADD   = $(top_srcdir)/src/common/libcommon.la \
 	$(top_srcdir)/src/slurmd/shmem_struct.o \
 	$(top_srcdir)/src/slurmd/circular_buffer.o \
 	$(top_srcdir)/src/slurmd/credential_utils.o \
+	$(top_srcdir)/src/slurmd/io.o \
+	$(top_srcdir)/src/slurmd/pipes.o \
 	$(SSL_LIBS)
 
