Making interconnect dependant things linkable with shared objects

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -4,9 +4,10 @@
 AUTOMAKE_OPTIONS = foreign
 
 sbin_PROGRAMS = slurmd
+noinst_LIBRARIES = libelan_interconnect.a libno_interconnect.a
 
 LDADD = $(top_srcdir)/src/common/libcommon.la \
-	$(SSL_LIBS)
+	$(SSL_LIBS) libno_interconnect.a
 
 
 slurmd_SOURCES = slurmd.c \
@@ -19,4 +20,7 @@ slurmd_SOURCES = slurmd.c \
 		signature_utils.c \
 		io.c \
 		pipes.c
+
+libelan_interconnect_a_SOURCES =  elan_interconnect.c
+libno_interconnect_a_SOURCES =  no_interconnect.c
 
