added HAVE_ELAN conditionnal

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -3,6 +3,12 @@
 
 AUTOMAKE_OPTIONS = foreign
 
+if WITH_ELAN
+interconnect_lib = libelan_interconnect.a
+else
+interconnect_lib = libno_interconnect.a
+endif
+
 sbin_PROGRAMS = slurmd
 noinst_LIBRARIES = libelan_interconnect.a libno_interconnect.a
 
@@ -19,7 +25,8 @@ slurmd_SOURCES = slurmd.c \
 		credential_utils.c \
 		signature_utils.c \
 		io.c \
-		pipes.c
+		pipes.c \
+		$(interconnect_lib)
 
 libelan_interconnect_a_SOURCES =  elan_interconnect.c
 libno_interconnect_a_SOURCES =  no_interconnect.c
