Changed partition keyword "Key" to "RootOnly". in slurm.conf. Merge all error functions into slurm_errno.[ch]. Convert error codes from #define to enum.

--- a/trunk/src/common/Makefile.am
+++ b/trunk/src/common/Makefile.am
@@ -26,15 +26,14 @@ libcommon_la_SOURCES = 	xmalloc.c 	\
 			safeopen.c	\
 			bitstring.c     \
 			pack.c		\
-			xerrno.c	\
 			hostlist.c	\
 			parse_spec.c	\
+			slurm_errno.c	\
 			slurm_protocol_api.c	\
 			slurm_protocol_pack.c	\
 			slurm_protocol_util.c	\
 			slurm_protocol_socket_implementation.c	\
 			slurm_protocol_defs.c	\
-			slurm_protocol_errno.c		\
 			util_signals.c \
 			$(elan_sources)
 
@@ -48,7 +47,6 @@ noinst_HEADERS = 	xmalloc.h 	\
 		 	strlcpy.h	\
 			bitstring.h     \
 			pack.h		\
-			xerrno.h	\
 			hostlist.h	\
 			parse_spec.h	\
 			slurm_protocol_api.h	\
@@ -59,9 +57,7 @@ noinst_HEADERS = 	xmalloc.h 	\
 			slurm_protocol_socket_common.h	\
 			slurm_protocol_mongo_common.h	\
 			slurm_protocol_interface.h	\
-			slurm_protocol_errno.h		\
 			slurm_errno.h		\
-			slurm_return_codes.h		\
 			qsw.h			\
 			util_signals.h
 
