Changed squeue_HEADERS to noinst_HEADERS so that make clean would work.

--- a/trunk/src/squeue/Makefile.am
+++ b/trunk/src/squeue/Makefile.am
@@ -10,6 +10,6 @@ LDADD = $(top_srcdir)/src/common/libcommon.la \
 		$(top_srcdir)/src/api/libslurm.la \
 		$(POPT_LIBS)
 
-squeue_HEADERS = squeue.h print.h
+noinst_HEADERS = squeue.h print.h
 squeue_SOURCES = squeue.c print.c opts.c 
 
