got nbio to compile

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -10,7 +10,7 @@ interconnect_lib = libno_interconnect.a
 endif
 
 sbin_PROGRAMS = slurmd
-noinst_LIBRARIES = libelan_interconnect.a libno_interconnect.a libforked_io.a  libthreaded_io.a
+noinst_LIBRARIES = libelan_interconnect.a libno_interconnect.a libforked_io.a  libthreaded_io.a libnbio.a
 
 LDADD = $(top_srcdir)/src/common/libcommon.la \
 	$(SSL_LIBS) libno_interconnect.a
@@ -33,6 +33,7 @@ slurmd_SOURCES = slurmd.c \
 
 libforked_io_a_SOURCES =  forked_io.c reconnect_utils.c io_threads.c 
 libthreaded_io_a_SOURCES =  threaded_io.c reconnect_utils.c io_threads.c 
+libnbio_a_SOURCES =  threaded_io.c nbio.c reconnect_utils.c
 
 libelan_interconnect_a_SOURCES =  elan_interconnect.c
 libno_interconnect_a_SOURCES =  no_interconnect.c 
