--- a/trunk/etc/slurm.conf
+++ b/trunk/etc/slurm.conf
@@ -15,6 +15,8 @@ SlurmctldPort=7002 SlurmdPort=7003
 SlurmctldTimeout=300 SlurmdTimeout=300
 StateSaveLocation=/tmp/slurm.state
 TmpFS=/tmp
+JobCredentialPrivateKey=private.key
+JobCredentialPublicCertificate=public.cert
 #
 # Node Configurations
 #
