Move of credential_utils to common
added preliminary line support to circular_buffer

--- a/trunk/src/slurmctld/Makefile.am
+++ b/trunk/src/slurmctld/Makefile.am
@@ -22,7 +22,7 @@ bin_PROGRAMS = slurmctld
 noinst_PROGRAMS = $(test_modules)
 
 LDADD = $(top_srcdir)/src/common/libcommon.la \
-	$(top_srcdir)/src/slurmd/libcredential_utils.la \
+	$(top_srcdir)/src/common/libcred.la \
 	$(SSL_LIBS)
 
 slurmctld_SOURCES = 	\
