--- a/trunk/etc/slurm.conf
+++ b/trunk/etc/slurm.conf
@@ -20,7 +20,7 @@ JobCredentialPublicCertificate=public.cert
 #
 # Node Configurations
 #
-NodeName=DEFAULT TmpDisk=16384 State=IDLE
+NodeName=DEFAULT TmpDisk=16384 State=UNKNOWN
 NodeName=lx[0001-0002] State=DRAINED
 NodeName=lx[0003-8000] Procs=16 RealMemory=2048 Weight=16
 NodeName=lx[8001-9999] Procs=32 RealMemory=4096 Weight=40 Feature=1200MHz
