--- a/trunk/testsuite/slurm_unit/slurmd/Makefile.am
+++ b/trunk/testsuite/slurm_unit/slurmd/Makefile.am
@@ -4,10 +4,14 @@ noinst_PROGRAMS = task_mgr-test circular_buffer-test task_launch-test credential
 
 if WITH_ELAN
 interconnect_lib = $(top_srcdir)/src/slurmd/libelan_interconnect.la
+process_lib = $(top_srcdir)/src/slurmd/libforked.la
+io_lib = $(top_srcdir)/src/slurmd/libforked_io.la
 else
 interconnect_lib = $(top_srcdir)/src/slurmd/libno_interconnect.la
+process_lib = $(top_srcdir)/src/slurmd/libthreaded.la
+io_lib = $(top_srcdir)/src/slurmd/libthreaded_io.la
 endif
-
+	
 
 INCLUDES = -I$(top_srcdir)/src/common
 LDADD   = $(top_srcdir)/src/common/libcommon.la \
@@ -20,5 +24,7 @@ LDADD   = $(top_srcdir)/src/common/libcommon.la \
 	$(top_srcdir)/src/slurmd/pipes.o \
 	$(top_srcdir)/src/common/libcred.la \
 	$(SSL_LIBS) \
-	$(interconnect_lib)
+	$(interconnect_lib) \
+	$(process_lib) \
+	$(io_lib)
 
