o added setenvpf() function to append environment vars to env    vector

--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -39,7 +39,8 @@ common_sources = slurmd.c \
 		shmem_struct.c \
 		circular_buffer.c \
 		pipes.c \
-		locks.c
+		locks.c \
+		setenvpf.c
 
 slurmd_SOURCES = $(common_sources)
 slurmd_nbio_SOURCES = $(common_sources)
@@ -56,6 +57,7 @@ libthreaded_io_la_SOURCES = threaded_io.c reconnect_utils.c io_threads.c
 libnb_io_la_SOURCES =  nb_io.c nbio.c reconnect_utils.c
 
 libelan_interconnect_la_SOURCES =  elan_interconnect.c
+libelan_interconnect_la_LIBADD = $(top_srcdir)/src/common/libcommon.la
 libno_interconnect_la_SOURCES =  no_interconnect.c 
 
 
